--- a/SMC_Photometry.ipynb
+++ b/SMC_Photometry.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -109,13 +109,163 @@
     "r=data['R_ap'] * u.arcsec\n",
     "\n",
     "Real_phot_table = []\n",
-    "\n",
+    "apertures_area = []\n",
     "for i in range(0, 160):\n",
     "    apertures = SkyCircularAperture(positions[i], r[i])\n",
+    "    pixl_apertures = apertures.to_pixel(w)\n",
+    "    apertures_area_loop = pixl_apertures.area()\n",
     "    Fake_phot_table = aperture_photometry(hdu[0], apertures)\n",
     "    Real_phot_table.append(Fake_phot_table['aperture_sum'][0])\n",
+    "    apertures_area.append(apertures_area_loop)\n",
     "    \n",
     "print(Real_phot_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SIMPLE  =                    T /                                                \n",
+       "BITPIX  =                  -32 /                                                \n",
+       "NAXIS   =                    2                                                  \n",
+       "NAXIS1  =                27207                                                  \n",
+       "NAXIS2  =                20790                                                  \n",
+       "EXTEND  =                    T / FITS dataset may contain extensions            \n",
+       "COMMENT   FITS (Flexible Image Transport System) format is defined in 'Astronomy\n",
+       "COMMENT   and Astrophysics', volume 376, page 359; bibcode: 2001A&A...376..359H \n",
+       "CTYPE1  = 'RA---TAN'                                                            \n",
+       "CTYPE2  = 'DEC--TAN'                                                            \n",
+       "EQUINOX =                 2000                                                  \n",
+       "CRVAL1  =         16.727693126                                                  \n",
+       "CRVAL2  =        -75.012761540                                                  \n",
+       "CDELT1  =         -0.000416667                                                  \n",
+       "CDELT2  =          0.000416667                                                  \n",
+       "CRPIX1  =               13606.                                                  \n",
+       "CRPIX2  =                5199.                                                  \n",
+       "CROTA2  =          0.512432317                                                  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdu[0].header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13.221427902675767, 16.987388063307957, 13.678209616055263, 14.636819837725936, 12.960203056230677, 15.754035882802111, 16.010460702789825, 14.030186687582081, 13.951354397746357, 17.000906878093708, 15.206891832127003, 14.731977821297379, 17.691082333710472, 16.790106993123779, 14.383325523118938, 14.406582381348509, 16.651254182261212, 15.440038564596996, 14.318142387558975, 15.202820898875576, 17.674198757356617, 14.982112868352386, 15.421551135231073, 18.931751186613429, 15.585564984592789, 14.265665114815086, 14.728911738985786, 13.640386751326014, 15.176598490724215, 16.42711727537041, 13.968273642801723, 14.858204908111713, 15.612047836450245, 14.849343653060647, 14.796982485123277, 13.527910448298471, 14.757653501975167, 15.281531124550462, 15.931765527706698, 14.033794619198193, 16.429056582801877, 14.733350090838684, 15.217257133531874, 15.472982860697716, 14.213962475585429, 15.657831290803941, 16.461446356627921, 12.892099594358381, 14.476095312414843, 13.338319556142689, 17.264971610707608, 16.208729349747838, 16.74568472847319, 14.63038476758636, 15.119893531148893, 18.142507520041583, 17.814791453343577, 19.041041835627379, 17.791768460240824, 16.719124575337286, 17.149925646912067, 17.481222786959222, 16.812217012215221, 15.759821515931515, 14.66470612038694, 15.002083121327249, 14.716518071997715, 16.17473387683458, 15.370757065805913, 15.991765604978571, 17.123632667192791, 15.987572204692782, 16.802012690838524, 19.974741651036627, 13.331898874060192, 17.6008290685193, 14.59671655641514, 10.458983944263025, 14.492769744101548, 12.544734396433419, 14.895609782576633, 14.562822924972201, 15.880408958300876, 13.38011718892529, 14.734686324740981, 14.642141080979528, 15.935278078006395, 13.596190852060509, 13.978851460260854, 17.300651104590067, 14.186435112977698, 15.806866040986511, 17.220270589640133, 16.597447511600141, 14.95953101784635, 12.894160909344937, 14.802688602198277, 13.286400992853384, 13.525071065649875, 11.650341177780554, 15.274266858375201, 12.601647169388139, 13.550957591080859, 15.570114708762059, 12.540462444998951, 13.798376815664007, 13.961580490347664, 15.147942283582847, 14.07553626609012, 15.057466781868365, 15.81011413669291, 15.520973157086178, 17.23961528089886, 14.1705062694177, 15.004050887215879, 20.004957879040699, 17.446252789213425, 16.912576906285636, 13.166462443859441, 14.941637605858189, 15.334012520022453, 13.80353630745569, 18.480363191518403, 14.491964604895106, 14.39615649466073, 14.370055732019505, 15.782432359282797, 13.738129196362529, 14.611020645185249, 15.0200153642818, 14.892140741117384, 13.141252198115545, 12.992861881687134, 16.123408708490125, 14.76960851343183, 16.552004533123004, 18.516298396005848, 19.163022737841992, 15.950619363639026, 16.540770419499307, 16.60205257162918, 16.949405291299172, 15.924625419266849, 15.44161652069184, 13.769771421467642, 17.422187917835963, 16.865308112539942, 14.311386138372855, 17.057300366238053, 17.01688797456017, 14.626167436441971, 14.056781786058954, 15.45109179282785, 15.150574168991078, 15.328941831021453, 16.63046738210797, 16.687957150240482, 13.38170334878396, 14.885353104994195, 16.427928191539834]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "NUV_magnitude = []\n",
+    "\n",
+    "for j in range(0, 160):\n",
+    "    mag_loop = (-2.5)*(np.log10(Real_phot_table[j]))+20.08\n",
+    "    NUV_magnitude.append(mag_loop)\n",
+    "\n",
+    "\n",
+    "print(NUV_magnitude)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 13.2214279   16.98738806  13.67820962  14.63681984  12.96020306\n",
+      "  15.75403588  16.0104607   14.03018669  13.9513544   17.00090688\n",
+      "  15.20689183  14.73197782  17.69108233  16.79010699  14.38332552\n",
+      "  14.40658238  16.65125418  15.44003856  14.31814239  15.2028209\n",
+      "  17.67419876  14.98211287  15.42155114  18.93175119  15.58556498\n",
+      "  14.26566511  14.72891174  13.64038675  15.17659849  16.42711728\n",
+      "  13.96827364  14.85820491  15.61204784  14.84934365  14.79698249\n",
+      "  13.52791045  14.7576535   15.28153112  15.93176553  14.03379462\n",
+      "  16.42905658  14.73335009  15.21725713  15.47298286  14.21396248\n",
+      "  15.65783129  16.46144636  12.89209959  14.47609531  13.33831956\n",
+      "  17.26497161  16.20872935  16.74568473  14.63038477  15.11989353\n",
+      "  18.14250752  17.81479145  19.04104184  17.79176846  16.71912458\n",
+      "  17.14992565  17.48122279  16.81221701  15.75982152  14.66470612\n",
+      "  15.00208312  14.71651807  16.17473388  15.37075707  15.9917656\n",
+      "  17.12363267  15.9875722   16.80201269  19.97474165  13.33189887\n",
+      "  17.60082907  14.59671656  10.45898394  14.49276974  12.5447344\n",
+      "  14.89560978  14.56282292  15.88040896  13.38011719  14.73468632\n",
+      "  14.64214108  15.93527808  13.59619085  13.97885146  17.3006511\n",
+      "  14.18643511  15.80686604  17.22027059  16.59744751  14.95953102\n",
+      "  12.89416091  14.8026886   13.28640099  13.52507107  11.65034118\n",
+      "  15.27426686  12.60164717  13.55095759  15.57011471  12.54046244\n",
+      "  13.79837682  13.96158049  15.14794228  14.07553627  15.05746678\n",
+      "  15.81011414  15.52097316  17.23961528  14.17050627  15.00405089\n",
+      "  20.00495788  17.44625279  16.91257691  13.16646244  14.94163761\n",
+      "  15.33401252  13.80353631  18.48036319  14.4919646   14.39615649\n",
+      "  14.37005573  15.78243236  13.7381292   14.61102065  15.02001536\n",
+      "  14.89214074  13.1412522   12.99286188  16.12340871  14.76960851\n",
+      "  16.55200453  18.5162984   19.16302274  15.95061936  16.54077042\n",
+      "  16.60205257  16.94940529  15.92462542  15.44161652  13.76977142\n",
+      "  17.42218792  16.86530811  14.31138614  17.05730037  17.01688797\n",
+      "  14.62616744  14.05678179  15.45109179  15.15057417  15.32894183\n",
+      "  16.63046738  16.68795715  13.38170335  14.8853531   16.42792819]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x2403de45630>"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEWCAYAAABrDZDcAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG3RJREFUeJzt3Xm4HFWdxvHvSwCRnZAYggmJAuLEhcUgOKIooCCRZRRZ\nBiECEkUUEFQCKqKIk0FRRsUREExYZBMQBmQEMoCjsphgwioEMRAgGwHZBwj85o9zLhSdu/RNbnXn\n3vN+nuc+t7au+lUv9dapqq5WRGBmZuVaod0FmJlZezkIzMwK5yAwMyucg8DMrHAOAjOzwjkIzMwK\n5yAw6wVJP5f0zZrm/RlJf6hj3v2RpNGSQtKK7a5loHMQLCVJsyUtkLRaZdhnJd2Quzt9E0uaLOm7\nkraW9Kyk1TuZ918kfbGL5d6Q57tpw/DL8vAP9cX6Ncz7eEkvSXqm8ve1vl5OfxARn4+IE5b28ZJ2\nlPR7SU9LWijpRkm79mWN+X2wUV/OsxXyZ2qHGud/rKS/5/fvw5IurIxr+nMl6W2SLpb0mKQnJd0u\n6UhJg+qqvW4OgmUzCDh8aR4YETcDDwN7VIdLeicwBji/m4ffB+xfecy6wPuAhUtTS5MujIjVK38n\nNU6gxO+pLkjaA7gYOBsYAQwDjgN2aWddVQN171vSeGA/YIeIWB0YC0xtmKzHz5WkDYFbgDnAuyJi\nLeBTwHuANepchzr5Q7tsvg98RdLaS/n4KVTeeNn+wG8jYlE3jzsP2KuyB7IPcBnwYscEkt4r6SZJ\n/5A0V9JPJa1cGf9RSffmPZqf5T3Tz/Z2BfKe1ImS/gg8B7xV0lqSzszLfSS3gAbl6QdJ+kHem3pA\n0qHVllPjXmFujZxb6d9a0p/yes1s2FO7QdIJkv6Y97ivkTSkMn6bymPn5EMxW0qaX92bk/QJSTO7\nWN/Jkr6buz+U9yyPyq3DuZIO6OJxAn4InBARv4iIJyPilYi4MSIO7mT6JVqUef0+m7s3yq/Zk/m5\nvDAP/32efGbe890rD/+4pBl53f8k6d2V+c6WdLSk24FnJa2Y+x/Jz+O9krbvYr3WknS2UuvmQUnf\n6NgZyM/vH/Lr/YTS3vjHupjPOcAGwH9pyRbnvpIeyuv59cpjVpA0UdLfJC2SdJGkwZ3NH9gS+F1E\n/A0gIuZFxOkN0/T4uQK+DfwpIo6MiLl5XvdGxL4R8Y8ulr3ccxAsm2nADcBXlvLx5wAflDQS0hsb\n+FdSQHTnUeBu4KO5f3/SXmbVy8CXgSGkvZrtgS/k5QwBfg0cA6wL3Av881KuA6Q9rQmkPaIHgcnA\nYmAjYPNcZ0fIHAx8PA8fS0OLqDuS3gxcBXwXGEx63i+RNLQy2b8CBwBvAlbO0yBpFHA18BNgKLAZ\nMCMi/gws4rXnsmN9Gp/PrqwHrAW8GTgIOFXSOp1MtwkwkvS894UTgGuAdUiti58ARMQH8/hNc8vt\nQkmbA2cBnyO93qcBV0h6Q2V++wDjgLWBDYEvAltGxBrAjsDsLur4CWn93wpsS3ovVsNwK9L7awhw\nEnBmDsXXiYj9gIeAXTppcW5Dev62B46T9E95+JeA3fNy1weeAE7tos6bgf0lfVXSWHV+GKeZz9UO\n9N1ruNxwECy744AvNWyMmhIRc0hBsl8etD3wBtLGridnk97YbwfWjoibGuY9PSJujojFETGb9OHf\nNo/eGbgrIi6NiMXAj4F5PSxvz7w32fG3fmXc5Ii4K89rcJ7/ERHxbEQsAH4E7N0xH+CUiJgTEY8D\n/9bEunb4NKm19Nu8N30tKYx3rkzzy4i4LyKeBy4ibfAhBcR1EXF+RLwUEYsiYkYeNyXPm7xHuSPw\nqyZregn4Tp7nb4FnSButRuvm/3ObnG8zyx0FrB8R/xcR3Z1kngCcFhG3RMTLETEFeAHYujLNj/Nr\n8jxpJ+INwBhJK0XE7I496aq8Md0bOCYins7vs5N57f0M8GBEnBERL5Oe5+GkQ2K98e2IeD4iZgIz\ngY7j+J8Hvh4RD0fEC8DxwB7q5PBWRJxLCo4dgRuBBZKO7mRZ3X6uSK9jX72Gyw0HwTKKiDuBK4GJ\nDaMW5/8rNQxfifQh7jCF1z44+wEXRMRL8OoVKh0nZ49tmM+lwHakPbdzGutSOqF1paR5kp4Cvkfa\nK4O09zSnsg5BOl/RnYsiYu3K36OVcXMq3aPyOs7tCA1SCL2ps2WTWhDNGgV8qhpIpL3F4ZVpqoH2\nHNBxMn4ksMTGLDsX2EXpxP+ewP92NPubsCgHYGfLfN10+f/wTsYtja8BAm6VdJekA7uZdhRwVMPz\nNpL0WnSovh/uB44gbVgXSLqgIfg7DCG91tXX8EFS66jDq69HRDyXOzt7frrT1Ws6Crissk73kEKs\n06CJiPMiYgdSq+fzwAmSdmyYrNvPFel17KvXcLnhIOgb3yId8qh+AOaSNvijG6Z9C6//4FwKjJD0\nYeATVA4L5StUOk7Ofq86k/yhuho4hM7fsP8J/BXYOCLWBI4lbTg6ahvRMWFuqo9YYg7Nq97Cdg5p\nb3NIJTTWjIh3VJY9sjL9Bg3zehZYtdK/XsO8z2kIpNUiYlITNc4hHfJYsviIR4CbSM//fnT+fC6r\ne3MNn2xy+mfz/06fi3yM++CIWJ90yOdn6vpKoTnAiQ3P26oRUb0g4XW3IY6IX0XENqSNbQD/3sl8\nH+O1lkmHDYBHmli/zvT2VshzgI81rNcq+fXseiGp9XYxcDvwzoZxPX2urqP517DfcBD0gbwHdSFw\nWGXYy8AlwImS1pW0kqR9SFcEXV2Z7lnSMcdfkprR03qx6GOBbXOTvNEawFPAM7mZe0hl3FXAuyTt\nnpvRh/L6De5Sy3vS1wAnS1ozn9DbUFLHYamLgMMkjcjH0htbUjOAvfPz1XgOoWPPfUelk86rKJ2w\nbSbEzgN2kLRnPhm6rqTNKuPPJu1lv4sUzn0qt7qOBL4p6YDKc7ONpMaTlkTEQtIG9dN5XQ+kEmSS\nPlVZ7ydIG9FXcv980jH7DmcAn5e0lZLVJI2T1OlVLpI2kbRdPofwf8DzlXlXa3yZ9HqeKGmNfB7m\nSNLrtDQa6+7Jz/OyR+W6h0rarbMJ84nrcbnOFfJJ63eQrgBq1N3n6lvAP0v6vqT18rw3knSulv6i\nkbZzEPSd7wCrNQz7AvA4ac9jAam5OS4i5jdMN4W0V9XsCUoAIuLRbo4Nf4V0XPxp0obgwsrjHiNd\n8nYSqak7hnSs/YXeLL8b+5NO1N5N2kj9mtea02cAvyMd672NJTe63yRt8J4gXaHx6rH6fE5lN9IH\ndSFpj/CrNPE+joiHSOcSjiK9JjN47VgzpKtDRgGXVQ5h9KmI+DWwF3Ag6cTkfNKJ78u7eMjBpPVb\nRNpo/akybkvgFknPAFcAh0fEA3nc8cCUfMhkz7xzcTDwU9Lzej/wmW5KfQMwibTHP490WO+YLqb9\nEqn18gDwB9LrdVY38+7OvwHfyHU3cwHGf5DW/RpJT5NOCG/VxbRPkd43DwH/IL33D+ns89Pd5yqf\nK3kfqaV/l6QnSTt800iftX5J4R+mKV6+WulhYN+IuL7Fyx4N/B1YqeFYe8tJ+hvwuYi4rp11mLWa\nWwSFyodX1s7N/47zBze3uay2kfRJ0uGV/2l3LWatNiC/RWhNeR+pGd9xCGf3fOlgcZRuCzIG2C8i\nljgWbjbQ+dCQmVnhfGjIzKxw/eLQ0JAhQ2L06NHtLsPMrF+ZPn36YxHR410P+kUQjB49mmnTenN5\nvZmZSWrqm/s+NGRmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVrh+\n8c1is56MnnhVW5Y7e9K4tizXrC+5RWBmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVjgHgZlZ4RwEZmaF\ncxCYmRXOQWBmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVjgHgZlZ\n4RwEZmaFqz0IJA2S9BdJV+b+wZKulTQr/1+n7hrMzKxrrWgRHA7cU+mfCEyNiI2BqbnfzMzapNYg\nkDQCGAf8ojJ4N2BK7p4C7F5nDWZm1r26WwSnAF8DXqkMGxYRc3P3PGBYZw+UNEHSNEnTFi5cWHOZ\nZmblqi0IJH0cWBAR07uaJiICiC7GnR4RYyNi7NChQ+sq08yseCvWOO/3A7tK2hlYBVhT0rnAfEnD\nI2KupOHAghprMDOzHtTWIoiIYyJiRESMBvYG/iciPg1cAYzPk40HLq+rBjMz61k7vkcwCfiIpFnA\nDrnfzMzapM5DQ6+KiBuAG3L3ImD7VizXzMx65m8Wm5kVzkFgZlY4B4GZWeEcBGZmhXMQmJkVzkFg\nZlY4B4GZWeEcBGZmhXMQmJkVzkFgZlY4B4GZWeEcBGZmhXMQmJkVzkFgZlY4B4GZWeEcBGZmhXMQ\nmJkVzkFgZlY4B4GZWeEcBGZmhXMQmJkVzkFgZlY4B4GZWeEcBGZmhXMQmJkVzkFgZlY4B4GZWeEc\nBGZmhXMQmJkVzkFgZlY4B4GZWeEcBGZmhXMQmJkVzkFgZlY4B4GZWeEcBGZmhXMQmJkVrrYgkLSK\npFslzZR0l6Rv5+GDJV0raVb+v05dNZiZWc/qbBG8AGwXEZsCmwE7SdoamAhMjYiNgam538zM2qS2\nIIjkmdy7Uv4LYDdgSh4+Bdi9rhrMzKxnK9Y5c0mDgOnARsCpEXGLpGERMTdPMg8Y1sVjJwATADbY\nYIM6yzRbaqMnXtW2Zc+eNK5ty7aBpdaTxRHxckRsBowA3ivpnQ3jg9RK6Oyxp0fE2IgYO3To0DrL\nNDMrWkuuGoqIfwDXAzsB8yUNB8j/F7SiBjMz61ydVw0NlbR27n4j8BHgr8AVwPg82Xjg8rpqMDOz\nntV5jmA4MCWfJ1gBuCgirpR0E3CRpIOAB4E9a6zBzMx60FQQSHpXRNzRmxlHxO3A5p0MXwRs35t5\nmZlZfZo9NPSz/OWwL0haq9aKzMyspZoKgoj4ALAvMBKYLulXkj5Sa2VmZtYSTZ8sjohZwDeAo4Ft\ngR9L+qukT9RVnJmZ1a+pIJD0bkk/Au4BtgN2iYh/yt0/qrE+MzOrWbNXDf0E+AVwbEQ83zEwIh6V\n9I1aKjMzs5ZoNgjGAc9HxMsAklYAVomI5yLinNqqMzOz2jV7juA64I2V/lXzMDMz6+eaDYJVKncS\nJXevWk9JZmbWSs0GwbOStujokfQe4Plupjczs36i2XMERwAXS3oUELAesFdtVZmZWcs0FQQR8WdJ\nbwc2yYPujYiX6ivLzMxapTc3ndsSGJ0fs4UkIuLsWqoyM7OWafamc+cAGwIzgJfz4AAcBPaqdv5a\nl5ktvWZbBGOBMfkXxczMbABp9qqhO0kniM3MbIBptkUwBLhb0q3ACx0DI2LXWqoyM7OWaTYIjq+z\nCDMza59mLx+9UdIoYOOIuE7SqsCgekszs+606+T87Enj2rJcq0+zt6E+GPg1cFoe9GbgN3UVZWZm\nrdPsyeJDgfcDT8GrP1LzprqKMjOz1mk2CF6IiBc7eiStSPoegZmZ9XPNBsGNko4F3ph/q/hi4L/q\nK8vMzFql2SCYCCwE7gA+B/yW9PvFZmbWzzV71dArwBn5z8zMBpBm7zX0dzo5JxARb+3ziszMrKV6\nc6+hDqsAnwIG9305ZmbWak2dI4iIRZW/RyLiFNIP2puZWT/X7KGhLSq9K5BaCL35LQMzM1tONbsx\nP7nSvRiYDezZ59WYmVnLNXvV0IfrLsTMzNqj2UNDR3Y3PiJ+2DflmJlZq/XmqqEtgSty/y7ArcCs\nOooyM7PWaTYIRgBbRMTTAJKOB66KiE/XVZiZmbVGs7eYGAa8WOl/MQ8zM7N+rtkWwdnArZIuy/27\nA1PqKcnMzFqp2auGTpR0NfCBPOiAiPhLfWWZmVmrNHtoCGBV4KmI+A/gYUlvqakmMzNroWZ/qvJb\nwNHAMXnQSsC5PTxmpKTrJd0t6S5Jh+fhgyVdK2lW/r/OsqyAmZktm2ZbBP8C7Ao8CxARjwJr9PCY\nxcBRETEG2Bo4VNIY0m8bTI2IjYGpud/MzNqk2SB4MSKCfCtqSav19ICImBsRt+Xup4F7SD96vxuv\nnWieQjrxbGZmbdJsEFwk6TRgbUkHA9fRix+pkTQa2By4BRgWEXPzqHl0cRmqpAmSpkmatnDhwmYX\nZWZmvdTsVUM/yL9V/BSwCXBcRFzbzGMlrQ5cAhwREU9Jqs43JC3xgzd53OnA6QBjx47tdBozM1t2\nPQaBpEHAdfnGc01t/CuPXYkUAudFxKV58HxJwyNirqThwILeFm1mZn2nx0NDEfEy8IqktXozY6Vd\n/zOBexpuSncFMD53jwcu7818zcysbzX7zeJngDskXUu+cgggIg7r5jHvB/bLj5uRhx0LTCKdczgI\neBD/roGZWVs1GwSX5r+mRcQfAHUxevvezMvMzOrTbRBI2iAiHooI31fIzGyA6ukcwW86OiRdUnMt\nZmbWBj0FQfXQzlvrLMTMzNqjpyCILrrNzGyA6Olk8aaSniK1DN6Yu8n9ERFr1lqdmZnVrtsgiIhB\nrSrEzMzaoze/R2BmZgOQg8DMrHAOAjOzwjkIzMwK5yAwMyucg8DMrHAOAjOzwjkIzMwK5yAwMyuc\ng8DMrHAOAjOzwjkIzMwK5yAwMyucg8DMrHAOAjOzwjkIzMwK5yAwMyucg8DMrHAOAjOzwjkIzMwK\n1+2P15uZNRo98aq2LXv2pHFtW/ZA5haBmVnhHARmZoVzEJiZFc5BYGZWOAeBmVnhHARmZoVzEJiZ\nFc5BYGZWOH+hbABq5xd+zKz/cYvAzKxwtQWBpLMkLZB0Z2XYYEnXSpqV/69T1/LNzKw5dbYIJgM7\nNQybCEyNiI2BqbnfzMzaqLYgiIjfA483DN4NmJK7pwC717V8MzNrTqvPEQyLiLm5ex4wrKsJJU2Q\nNE3StIULF7amOjOzArXtZHFEBBDdjD89IsZGxNihQ4e2sDIzs7K0OgjmSxoOkP8vaPHyzcysQauD\n4ApgfO4eD1ze4uWbmVmDOi8fPR+4CdhE0sOSDgImAR+RNAvYIfebmVkb1fbN4ojYp4tR29e1TDMz\n6z1/s9jMrHAOAjOzwjkIzMwK5yAwMyucg8DMrHAOAjOzwjkIzMwK5yAwMyucg8DMrHAOAjOzwjkI\nzMwK5yAwMyucg8DMrHAOAjOzwjkIzMwK5yAwMyucg8DMrHC1/UKZmVlfGz3xqrYsd/akcW1Zbqu4\nRWBmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVjgHgZlZ4RwEZmaFcxCYmRXOXygzM+tBu77IBq35Mptb\nBGZmhXMQmJkVzkFgZlY4B4GZWeEcBGZmhXMQmJkVzkFgZlY4B4GZWeEG/BfK2vlFEDOz/sAtAjOz\nwrUlCCTtJOleSfdLmtiOGszMLGl5EEgaBJwKfAwYA+wjaUyr6zAzs6QdLYL3AvdHxAMR8SJwAbBb\nG+owMzPac7L4zcCcSv/DwFaNE0maAEzIvc9IWgQ8Vn95y6UhlLvu4PX3+pe7/kP078u07qOamWi5\nvWooIk4HTu/olzQtIsa2saS2KXndwevv9S93/Vu17u04NPQIMLLSPyIPMzOzNmhHEPwZ2FjSWySt\nDOwNXNGGOszMjDYcGoqIxZK+CPwOGAScFRF3NfHQ03ueZMAqed3B6+/1L1dL1l0R0YrlmJnZcsrf\nLDYzK5yDwMyscMtdEEg6S9ICSXdWhg2WdK2kWfn/Ou2ssU5drP/3Jf1V0u2SLpO0djtrrFNn618Z\nd5SkkDSkHbW1QlfrL+lL+T1wl6ST2lVfnbp4728m6WZJMyRNk/TedtZYJ0kjJV0v6e78Oh+eh9e+\n/VvuggCYDOzUMGwiMDUiNgam5v6BajJLrv+1wDsj4t3AfcAxrS6qhSaz5PojaSTwUeChVhfUYpNp\nWH9JHyZ9+37TiHgH8IM21NUKk1nytT8J+HZEbAYcl/sHqsXAURExBtgaODTffqf27d9yFwQR8Xvg\n8YbBuwFTcvcUYPeWFtVCna1/RFwTEYtz782k714MSF28/gA/Ar4GDOirG7pY/0OASRHxQp5mQcsL\na4Eu1j2ANXP3WsCjLS2qhSJibkTclrufBu4h3Ymh9u3fchcEXRgWEXNz9zxgWDuLabMDgavbXUQr\nSdoNeCQiZra7ljZ5G/ABSbdIulHSlu0uqIWOAL4vaQ6pJTSQW8OvkjQa2By4hRZs//pLELwq0vWu\nA3qvsCuSvk5qPp7X7lpaRdKqwLGkwwKlWhEYTDpc8FXgIklqb0ktcwjw5YgYCXwZOLPN9dRO0urA\nJcAREfFUdVxd27/+EgTzJQ0HyP8HZNO4O5I+A3wc2DfK+vLHhsBbgJmSZpMOi90mab22VtVaDwOX\nRnIr8ArpRmwlGA9cmrsvJt29eMCStBIpBM6LiI71rn3711+C4ArSG4L8//I21tJyknYiHR/fNSKe\na3c9rRQRd0TEmyJidESMJm0Ut4iIeW0urZV+A3wYQNLbgJUp526cjwLb5u7tgFltrKVWuZV3JnBP\nRPywMqr+7V9ELFd/wPnAXOAl0of+IGBd0tnyWcB1wOB219ni9b+fdOvuGfnv5+2us5Xr3zB+NjCk\n3XW2+PVfGTgXuBO4Ddiu3XW2cN23AaYDM0nHy9/T7jprXP9tSId9bq981nduxfbPt5gwMytcfzk0\nZGZmNXEQmJkVzkFgZlY4B4GZWeEcBGZmhXMQWBHyXUtPrvR/RdLxuXuypD0apn8m/39A0iYN406R\ndHQny5gs6TlJazRMO6DvmGr9n4PASvEC8Iml2CBfQPpdbQAkrQDskYd35n7STcI6pt0OeKTX1Zq1\nkIPASrGY9PuvX+7l484H9qr0fxB4MCIe7GL6CyrTfwj4Y142AJJ+I2l6vt/8hMrwgyTdJ+lWSWdI\n+mkv6zRbag4CK8mpwL6S1mr2ARFxB/CKpE3zoL1J4dCV+4Ch+cdD9mHJlsOBEfEeYCxwmKR1Ja0P\nfJN0U7n3A29vtj6zvuAgsGJEupPj2cBhjaM6m7zSfT6wt6QVSfeCv7iHRV1KCoytgP9tGHeYpJmk\n35UYCWxMupHajRHxeES81MT8zfrUiu0uwKzFTiHdr+eXlWGLgFd//k/SYF5/U7cLgGuAG4HbI2J+\nnu6XpHvGPxoRO1emv5B0f5wpEfFKxx2jJX0I2AF4X0Q8J+kGYJW+XDmzpeEWgRUlIh4HLiLd0KzD\nDcBeklbO/Z8Brq885m+kYJhE5bBQRBwQEZs1hAD5/MHXgZ81LH4t4IkcAm8nHQoC+DOwraR1cqvj\nk8u0kma95CCwEp1M5X7+EXEl6RDOdEkzSMfpGy8PPZ907P5SmhARp+UAqfpvYEVJ95BC5eY87SPA\n94BbSSeXZwNP9m6VzJae7z5qthyQtHpEPJNbBJcBZ0XEZe2uy8rgFoHZ8uH43Bq5E/g76cdozFrC\nLQIzs8K5RWBmVjgHgZlZ4RwEZmaFcxCYmRXOQWBmVrj/B6kXM1+5sPawAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2403dc9f240>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "NUV_Mag2 = np.asarray(NUV_magnitude)\n",
+    "NUV_Mag = NUV_Mag2.flatten()\n",
+    "print(NUV_Mag)\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "NBINS = 160\n",
+    "plt.hist(NUV_Mag)\n",
+    "plt.title(\"NUV-Mag Frequency in Clusters on the SMC\")\n",
+    "plt.xlabel(\"NUV-Mag\")\n",
+    "plt.ylabel(\"Frequency\")"
    ]
   },
   {
